updated code to version 2.0
